<resources>
    <string name="app_name">Arcadia High Mobile</string>
    <string name="navbar_title_home">Home</string>
    <string name="navbar_title_bulletin">Bulletin</string>
    <string name="navbar_title_saved">Saved</string>
    <string name="navbar_title_profile">Profile</string>
    <string name="db_app_id">1:654225823864:android:79667fc6142c94cbb7758d</string>
    <string name="db_url">https://ahs-app.firebaseio.com/</string>
    <string name="db_api_key">AIzaSyBRBGC45zgZd6JtLKDq2nfwDnW5symCwX8</string>
    <string name="db_name">main</string>
    <string name="db_locations">locations</string>
    <string name="db_location_ausdNews">homepage</string>
    <string name="db_location_bulletin">bulletin</string>
    <string name="db_location_community">community</string>
    <string name="db_locations_catID">categoryIDs</string>
    <string name="db_categories">categories</string>
    <string name="db_categories_articleIds">articleIDs</string>
    <string name="db_categories_titles">title</string>
    <string name="db_categories_color">color</string>
    <string name="db_articles">articles</string>
    <string name="db_articles_author">author</string>
    <string name="db_articles_body">body</string>
    <string name="db_articles_categoryID">categoryID</string>
    <string name="db_articles_date">date</string>
    <string name="db_articles_featured">featured</string>
    <string name="db_articles_imageURLs">imageURLs</string>
    <string name="db_articles_videoURLs">videoIDs</string>
    <string name="db_articles_notified">notified</string>
    <string name="db_articles_thumbURLs">thumbURLs</string>
    <string name="db_articles_timestamp">timestamp</string>
    <string name="db_articles_title">title</string>
    <string name="db_articles_views">views</string>
    <string name="settings_file">settings</string>
    <string name="theme_key">themeKey</string>
    <string name="textscalar_key">textKey</string>
    <string name="profile_page_header_text">Your Profile</string>
    <string name="profile_card_default_given_name">Digital ID card</string>
    <string name="profile_card_default_family_name">Tap to sign in</string>
    <string name="profile_card_barcode_description">Student ID barcode</string>
    <string name="profile_card_pic_description">Profile picture</string>
    <string name="profile_time_remaining_default_value">30 min</string>
    <string name="profile_time_remaining_default_header">Time Remaining</string>
    <string name="profile_period_default_header">Period</string>
    <string name="profile_period_default_value">2nd</string>
    <string name="profile_options_header">Options</string>
    <string name="profile_info_header">Info</string>
    <string name="firebaseFunctionsIncrementView">https://us-central1-arcadia-high-mobile.cloudfunctions.net/incrementView</string>
    <string name="student_bulletin_title_text"><b>Student</b> Bulletin</string>
    <string name="db_categories_iconURL">iconURL</string>
    <string name="bulletin_comming_up_text"><b>Coming</b> Up</string>
    <string name="profile_card_default_photo_url">https://ahs.app/icon.png</string>
    <string name="profile_card_default_user_id">12345</string>
    <string name="article_default_title">Article Title</string>
    <string name="article_default_category">Section Title</string>
    <string name="featured_article_indicator">Featured article</string>
    <string name="article_default_time">sometime ago</string>
    <string name="medium_article_indicator">Medium article indicator</string>
    <string name="home_title">Arcadia</string>
    <string name="home_default_month">January</string>
    <string name="home_notification_bell">Open notifications</string>
    <string name="home_search_button">Search article titles</string>
    <string name="logo_description">The Arcadia High Mobile logo: a peacock feather in shades of cardinal and gold.</string>
    <string name="community_title">Community</string>
    <string name="main_title">AUSD News</string>
    <string name="notifications_section_title"><b>Notifications</b></string>
    <string name="notificationChannelID">ahsMobileNotificationChannelID</string>
    <string name="notificationChannelName">AHS Mobile Notifications</string>
    <string name="isFirstTimeAppLoad">isFirstTimeAppLoad</string>
    <string name="notifications_settings_header">Notification Settings</string>
    <string name="calendar_section_title"><b>Your</b> Schedule</string>
    <string name="terms_and_agreements_title"><b>Terms</b> and <b>Agreements</b></string>
</resources>