<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"

        android:icon="@drawable/navbar_home_selector"
        android:title="@string/navbar_title_home"
        android:menuCategory = "secondary"/>

    <item
        android:id="@+id/navigation_bulletin"
        android:icon="@drawable/navbar_bulletin_selector"
        android:title="@string/navbar_title_bulletin"
        android:menuCategory = "secondary"/>

    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/navbar_saved_selector"
        android:title="@string/navbar_title_saved"
        android:menuCategory = "secondary"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/navbar_profile_selector"
        android:title="@string/navbar_title_profile"
        android:menuCategory = "secondary"/>

</menu>