<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="horizontal"
    android:padding="0dp"
    android:layout_marginTop="@dimen/padding">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/medium_article_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/img_frame_small"
        android:elevation="0dp"

        android:fadingEdgeLength="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintDimensionRatio="1.5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@drawable/img_frame_large"
        app:srcCompat="@drawable/img_frame_large" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/medium_article_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_x.75"
        android:fontFamily="@font/sfprodisplay_bold"
        android:gravity="start"
        android:text="@string/article_default_title"
        android:maxLines="2"
        android:ellipsize="end"
        android:textAlignment="textStart"
        android:textColor="?attr/titleColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/medium_article_image"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_x.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/medium_article_image"
        app:layout_constraintTop_toBottomOf="@+id/medium_article_name">

        <LinearLayout
            android:id="@+id/featured_article_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/featured_article_name">

            <ImageView
                android:id="@+id/medium_article_indicator"
                android:layout_width="@dimen/padding_x.5"
                android:layout_height="match_parent"
                android:src="@drawable/article_type_indicator"
                android:contentDescription="@string/medium_article_indicator" />

            <TextView
                android:id="@+id/medium_article_category"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="8dp"
                android:text="@string/article_default_category"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/medium_article_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingHorizontal="8dp"
                android:textSize="12sp"
                android:text="@string/article_default_time" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

