<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <FrameLayout
        android:duplicateParentState="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:foreground="?android:attr/selectableItemBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_news_constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:padding="@dimen/padding_x.5">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/featured_article_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/img_frame_large"
                android:elevation="@dimen/elevation"
                android:fadingEdgeLength="@dimen/cardview_compat_inset_shadow"

                app:shapeAppearanceOverlay="@drawable/img_frame_large"
                app:layout_constraintDimensionRatio="1.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_frame_large">

            </com.google.android.material.imageview.ShapeableImageView>
<!--            android:outlineAmbientShadowColor="@color/black"-->
<!--            android:outlineSpotShadowColor="@color/black"-->
            <TextView
                android:id="@+id/featured_article_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_x.5"
                android:fontFamily="@font/sfprodisplay_bold"
                android:gravity="start"
                android:text="@string/article_default_title"
                android:maxLines="2"
                android:ellipsize="end"
                android:textAlignment="textStart"
                android:textColor="?attr/titleColor"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/featured_article_image" />

            <LinearLayout
                android:id="@+id/featured_article_stats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/featured_article_name">

                <ImageView
                    android:id="@+id/featured_article_indicator"
                    android:layout_width="@dimen/padding_x.5"
                    android:layout_height="match_parent"
                    android:src="@drawable/article_type_indicator"
                    android:contentDescription="@string/featured_article_indicator" />


                <TextView
                    android:id="@+id/featured_article_category"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="8dp"
                    android:text="@string/article_default_category"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/featured_article_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="8dp"
                    android:textSize="12sp"
                    android:text="@string/article_default_time" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>